--- a/views/ajax-2.html
+++ b/views/ajax-2.html
@@ -1,70 +1,58 @@
-
 <!DOCTYPE html>
- <html>
-    <head>
-         <title> Webpage Title </title>
-         <meta charset='utf-8'>
-         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-         <!-- css files -->
-         <link href="js-support/bootstrap.min.css" type="text/css" rel="stylesheet">
-         <link href="css-font-awesome/all.css" type="text/css" rel="stylesheet">
-         <link href="css-font-awesome/fontawesome.css" type="text/css" rel="stylesheet">    
-         <title> Good Template </title>
-         <style>
-         
-         </style> 
-    </head>
-    <body>
-        <div class="container">
-            <!-- <button> Click me to get data! </button> -->
-            <input type="text" name="name" class="form-control" />
-            <p id="test"> </p>
-        </div>
-        <!-- js scripts -->
-        <script src="js-support/jquery-3.5.1.js"> </script>
-        <script src="js-support/popper.min.js"> </script>    
-        <script src="js-support/bootstrap.min.js"> </script>
-        <script src="js-support/util.js"> </script>
-        <script src="js-support/modal.js"> </script>
-        <script src="js-support/collapse.js"> </script>
-        <script src="js-support/tooltip.js"> </script>
-        <script src="js-support/popover.js"> </script>
-        <script src="js-support/modal-support.js"> </script>
-        <script src="js-font-awesome/all.js"> </script>
-        <script src="js-font-awesome/fontawesome.js"> </script>  
-        <script>
-        console.log('it is working!');
-        </script> 
-        <script>
-           /* $(document).ready(function()
+<html lang="en">
+  <head>
+    <title>Ajax Basics</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- css files -->
+    <link
+      href="../public/css/slate-bootstrap.min.css"
+      type="text/css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <!-- <button> Click me to get data! </button> -->
+      <input type="text" name="name" class="form-control" />
+      <p id="test"></p>
+    </div>
+    <!-- js scripts -->
+    <script src="../public/js/jquery-3.5.1.js"></script>
+    <script src="../public/js/popper.min.js"></script>
+    <script src="../public/js/bootstrap.min.js"></script>
+    <script>
+      /* $(document).ready(function()
+        {
+            $("button").click(function() 
             {
-                $("button").click(function() 
+                $.get("test.txt", function(data, status)
                 {
-                    $.get("test.txt", function(data, status)
-                    {
-                        $("#test").html(data);
-                        alert(status);
-                    })
-                }
-                );
-            });
-            */
-            $(document).ready(function()
-            {
-                $("input").keyup(function()
-                {
-                    let name = $("input").val();
-                    $.post("suggestions.php",
-                    {
-                        suggestion: name
-                    }, 
-                    function(data, status)
-                    {
-                        $("#test").html(data);
-                    });
+                    $("#test").html(data);
+                    alert(status);
                 })
-            })
-        </script>
-    </body>
+            }
+            );
+        });
+        */
+      $(document).ready(function () {
+        $("input").keyup(function () {
+          let name = $("input").val();
+          $.post(
+            "suggestions.php",
+            {
+              suggestion: name,
+            },
+            function (data, status) {
+              $("#test").html(data);
+            }
+          );
+        });
+      });
+    </script>
+  </body>
 </html>
